--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -446,8 +446,6 @@ main section div h1 {
   overflow: hidden;
 }
 .card .top-part .image-content img {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   transform: scale(1.4);
   -o-object-position: -16px -68px;
      object-position: -16px -68px;
